--- a/package.json
+++ b/package.json
@@ -2,9 +2,19 @@
   "name": "algorithms",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "main": "index.d.ts",
+  "scripts": {
+    "prepublish": "npm run build",
+    "build": "tsc",
+    "test": "node test.js"
+  },
   "keywords": [],
   "author": "MaximLeskovetc",
   "license": "ISC",
-  "dependencies": {}
+  "dependencies": {
+    "typescript": "^3.5.2"
+  },
+  "devDependencies": {
+    "tsc-watch": "^2.2.1"
+  }
 }
